--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "astro": "^4.11.5",
     "axios": "^1.7.2",
     "clsx": "^2.1.1",
+    "lucide-react": "^0.408.0",
     "react": "^18.3.1",
+    "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
     "sonner": "^1.5.0"
   },
