--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react": "^18.3.1",
     "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
-    "sonner": "^1.5.0"
+    "sonner": "^1.5.0",
+    "swiper": "^11.1.5"
   },
   "devDependencies": {
     "tailwindcss": "^3.4.5"
